--- a/Pipfile
+++ b/Pipfile
@@ -1,28 +1,23 @@
 [[source]]
-
 url = "https://pypi.python.org/simple"
 verify_ssl = true
 name = "pypi"
 
-
 [packages]
-
-django = ">2.0"
+Django = ">2.0"
 djangorestframework = ">3.7"
-markdown = "*"
+Markdown = "*"
 django-filter = "*"
 gunicorn = "*"
 dj-database-url = "*"
-"psycopg2" = "*"
 whitenoise = "*"
 coreapi = "*"
 brotlipy = "*"
-
+"psycopg2-binary" = "*"
 
 [dev-packages]
-
-
+"autopep8" = "*"
+pycodestyle = "*"
 
 [requires]
-
 python_version = "3.6"
