--- a/Pipfile
+++ b/Pipfile
@@ -1,11 +1,11 @@
 [[source]]
-url = "https://pypi.python.org/simple"
+url = "https://pypi.org/simple"
 verify_ssl = true
 name = "pypi"
 
 [packages]
 Django = ">2.0"
-djangorestframework = ">3.7"
+djangorestframework = ">3.8"
 Markdown = "*"
 django-filter = "*"
 gunicorn = "*"
@@ -17,8 +17,8 @@ brotlipy = "*"
 requests = "*"
 
 [dev-packages]
+"flake8" = "*"
 "autopep8" = "*"
-pycodestyle = "*"
 
 [requires]
 python_version = "3.6"
