--- a/Pipfile
+++ b/Pipfile
@@ -3,9 +3,17 @@ url = "https://pypi.org/simple"
 verify_ssl = true
 name = "pypi"
 
+[requires]
+python_version = "3.7"
+python_full_version = "3.7.0"
+
+[scripts]
+makemigrations = "python manage.py makemigrations"
+migrate = "python manage.py migrate"
+
 [packages]
-Django = ">2.0"
-djangorestframework = ">3.8"
+Django = "*"
+djangorestframework = "*"
 Markdown = "*"
 django-filter = "*"
 gunicorn = "*"
@@ -15,10 +23,10 @@ coreapi = "*"
 brotlipy = "*"
 "psycopg2-binary" = "*"
 requests = "*"
+feedparser = "*"
 
 [dev-packages]
+black = "*"
 "flake8" = "*"
-"autopep8" = "*"
-
-[requires]
-python_version = "3.6"
+rope = "*"
+pytest = "*"
