Fix Whitenoise-4 settings

--- a/Pipfile
+++ b/Pipfile
@@ -14,14 +14,14 @@ migrate = "python manage.py migrate"
 [packages]
 Django = "*"
 djangorestframework = "*"
+gunicorn = "*"
 Markdown = "*"
 django-filter = "*"
-gunicorn = "*"
 dj-database-url = "*"
-whitenoise = "*"
-coreapi = "*"
-brotlipy = "*"
 "psycopg2-binary" = "*"
+coreapi = "*"
+whitenoise = "*"
+brotli = "*"
 requests = "*"
 feedparser = "*"
 
