Add pre-commit hooks

--- a/Pipfile
+++ b/Pipfile
@@ -5,32 +5,33 @@ name = "pypi"
 
 [requires]
 python_version = "3.7"
-python_full_version = "3.7.0"
+python_full_version = "3.7.1"
 
 [scripts]
-format = "black --line-length 88 --verbose"
-lint = "flake8 --max-line-length=88 --statistics -vv --count"
+format = "black . --line-length 88 --verbose"
+lint = "flake8 --max-line-length=88 --statistics -v --count"
 makemigrations = "python manage.py makemigrations"
 migrate = "python manage.py migrate"
 start = "python manage.py runserver"
 
 [packages]
+brotli = "*"
+coreapi = "*"
 Django = "*"
 djangorestframework = "*"
-gunicorn = "*"
-Markdown = "*"
 django-filter = "*"
 dj-database-url = "*"
-"psycopg2-binary" = "*"
-coreapi = "*"
-whitenoise = "*"
-brotli = "*"
-requests = "*"
 feedparser = "*"
+gunicorn = "*"
+Markdown = "*"
 pyjwt = "*"
+requests = "*"
+whitenoise = "*"
+"psycopg2-binary" = "*"
 
 [dev-packages]
-black = "*"
 "flake8" = "*"
-rope = "*"
+black = "*"
+pre-commit = "*"
 pytest = "*"
+rope = "*"
