--- a/.editorconfig
+++ b/.editorconfig
@@ -10,10 +10,15 @@ indent_style = tab
 insert_final_newline = true
 trim_trailing_whitespace = true
 
+[*.md]
+max_line_length = off
+trim_trailing_whitespace = false
+indent_size = 4
+indent_style = space
+
 [*.py]
 indent_size = 4
 indent_style = space
 
-[*.md]
-max_line_length = off
-trim_trailing_whitespace = false
+[*.{yml,yaml}]
+indent_style = space
