Update python to v3.7.3

--- a/.editorconfig
+++ b/.editorconfig
@@ -5,20 +5,14 @@ root = true
 [*]
 charset = utf-8
 end_of_line = lf
-indent_size = 2
-indent_style = tab
+indent_size = 4
+indent_style = space
 insert_final_newline = true
 trim_trailing_whitespace = true
 
 [*.md]
 max_line_length = off
 trim_trailing_whitespace = false
-indent_size = 4
-indent_style = space
 
-[*.py]
-indent_size = 4
-indent_style = space
-
-[*.{yml,yaml}]
-indent_style = space
+[*.{css,scss,html,js,json,xml,yml,yaml}]
+indent_size = 2
