--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,21 +1,20 @@
 [tool.black]
-line-length = 88
-py36 = true
+line-length = 80
+target_version = ['py37']
 include = '\.pyi?$'
 exclude = '''
 /(
     \.git
-  | \.hg
-  | \.mypy_cache
-  | \.tox
-  | \.venv
-  | \.vscode
-  | _build
-  | .*migrations.*
-  | __pycache__
-  | buck-out
-  | build
-  | dist
-  | node_modules
+    | \.hg
+    | \.mypy_cache
+    | \.tox
+    | \.venv
+    | \.vscode
+    | _build
+    | __pycache__
+    | buck-out
+    | build
+    | dist
+    | node_modules
 )/
 '''
